# biodivine

./: .gitignore  README.md  RUST_DEV_GUIDE.md  build.gradle.kts  package-lock.json  package.json  settings.gradle.kts  webpack.config.js  website.md
BEEP/: BEEP-1-BDD solver.md  BEEP-2-BCSL to SBML-multi.md  BEEP-3-BCSL quantitative extension.md  BEEP-template.md
content/: test.md
rust-lib-template/: Cargo.toml  Makefile.toml  README.md
rust-lib-template/src/: lib.rs
src/main/kotlin/biodivine/homepage/: Main.kt
src/main/kotlin/biodivine/website/: MDC.kt  main.kt  package.kt
