[package]
name = "biodivine-lib-name"
version = "0.1.0"
authors = ["Samuel Pastva <daemontus@gmail.com>"]
edition = "2018"

[dependencies]

[dev-dependencies]

[features]
# Use this config flag to enable checks or validation that should not be necessary 
# (for example, the check can fail only if function contract is violated).
# In production/benchmark releases, this feature should be disabled to enable best
# performance. Avoid introducing dead code when shields_up is on, to avoid 
# dead code coverage issues.
shields_up = []

# Enable rich docs for some online docs autogen services.
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./res/docs-head.html"]

# Before publishing, consider filling out and uncommenting these values.
# Also see https://doc.rust-lang.org/cargo/reference/manifest.html for reference.
#
# [package]
# description = "Some simple plaintext description"
# documentation = "https://url.to/docs"
# homepage = "https://url.to/homepage"
# repository = "https://url.to/repo"
# readme = "path/to/readme.md"
# keywords = ["...", "..."] (up to five)
# categories = ["...", "..."] (see crates.io/category_slugs)
# license = "..." (valid SPDX 2.1 license name)
#
# [badges]
# travis-ci = { repository = "user/repo" }
# codecov = { repository = "user/repo" }
# maintenance = { status = "..." } 